<resources>
    <string name="app_name">TakaslaOriginal</string>
    <string name="api_key">AIzaSyB9PXx6W2BOKgQfkrp9Ppybrg4MBHh3AEE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_fragment">Login Fragment</string>
    <string name="register_fragment">Register Fragment</string>
    <string name="name_surname">ISIM SOYISIM</string>
    <string name="email_address">E-MAIL ADRESI</string>
    <string name="password">ŞIFRE</string>
    <string name="password_confirm">ŞIFRE TEKRAR</string>
    <string name="register">Üye Ol</string>
    <string name="my_password">ŞIFREMI</string>
    <string name="i_forgot">UNUTTUM!</string>
    <string name="users_collection">users</string>
    <string name="login">Giriş Yap</string>
    <string name="login_via_facebook">Facebook Ile Giriş Yap</string>
    <string name="what_are_you_looking_for">Ne arıyorsun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products_fragment">Products Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="capture_fragment">Capture Fragment</string>
    <string name="pick_from_gallery">Galeriden Seç</string>
    <string name="activity_gallery_image_transition" translatable="false">%s[image]</string>
    <string name="activity_gallery_checkbox_transition" translatable="false">%s[checkbox]</string>
    <string name="activity_gallery_permission_request_explanation">To fetch your Media, allow storage permission in App Permission Settings.</string>
    <string name="activity_gallery_permission_request_settings">Ayarlar</string>
    <string name="activity_gallery_action_select_all">Hepsini Seç</string>
    <string name="activity_gallery_action_clear">Temizle</string>
    <string name="activity_gallery_no_images">Fotoğraf Yok.</string>
    <string name="activity_gallery_max_selection_reached">Seçebileceğin fotoğraf sınırına ulaştın.</string>
    <string name="activity_gallery_will_exceed_max_selection">Seçebileceğin fotoğraf sınırını aştın.</string>

    <string name="activity_gallery_bucket_all_media">Tüm Medya</string>
    <string name="contunue">Devam Et</string>
    <string name="sort_fragment">Sort Fragment</string>
    <string name="back">Geri</string>
    <string name="select_category">Kategori Seç</string>
    <string name="category_fragment">Category Fragment</string>
    <string name="details_of_product">İlan Detayları</string>
    <string name="status_of_product">Ürünün Durumu</string>
    <string name="newWord">Yeni</string>
    <string name="lilUsed">Az Kullanılmış</string>
    <string name="used">Kullanılmış</string>
    <string name="details_fragment">Details Fragment</string>
    <string name="title_of_product">Ürünün Başlığı</string>
    <string name="price_of_product">Fiyat</string>
    <string name="exhange_of_product">Takas</string>
    <string name="open_for_exchange">Sadece Takasa Açık</string>
    <string name="pricable">Fiyatlanabilir</string>
    <string name="place_of_product">Konum</string>
    <string name="confirm_location">Konumu Onayla</string>
    <string name="choose_a_location">Konum Seç</string>
    <string name="description_of_product">Ürün Açıklaması</string>
    <string name="confirm_product">İlanı Yayınla</string>
    <string name="product_published">İlan Yayınlandı</string>
    <string name="exit">Kapat</string>
    <string name="published_fragment">Published Fragment</string>
    <string name="new_products">Yeni İlanlar</string>
    <string name="house_text">Emlak</string>
    <string name="vehicle_text">Vasıta</string>
    <string name="electronic_text">Elektronik</string>
    <string name="home_stuff_text">Ev Eşyaları</string>
    <string name="book_text">Kitap</string>
    <string name="clothes_text"><![CDATA[Giyim & Aksesuar]]></string>
    <string name="office_stuff_text">Ofis Malzemeleri</string>
    <string name="auto_part_text">Oto Yedek Parça</string>
    <string name="toy_text">Oyuncak Dünyası</string>
    <string name="antique_text">Antika</string>
    <string name="music_stuff_text">Müzik Aletleri</string>
    <string name="garden_hobby_text"><![CDATA[Bahçe & Hobi]]></string>
    <string name="sport_stuff_text">Spor Ekipmanları</string>
    <string name="other_text">Diğer</string>
    <string name="collection_products">Products</string>
    <string name="my_products">İlanlarım</string>
    <string name="settings">Ayarlar</string>
    <string name="invite_friend">Arkadaşını Davet Et</string>
    <string name="proteciton_of_data_personal">Kişisel Verilerin Korunması</string>
    <string name="dependency">Şartlar Ve Koşullar</string>
    <string name="privacy">Gizlilik Politikası</string>
    <string name="logout">Çıkış Yap</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="save">Kaydet</string>
    <string name="name_surname_caps_false">İsim Soyisim</string>
    <string name="email_caps_false">E-Posta</string>
    <plurals name="activity_gallery_count_selection">
        <item quantity="one">%d seçildi</item>
        <item quantity="other">%d seçildi</item>
    </plurals>
    <string name="title_activity_my_products">MyProductsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="active_products">Aktif İlan</string>
    <string name="timout_products">Süresi Dolan</string>
    <string name="sold_products">Satıldı</string>
    <string name="liked_products">Favorilerim</string>
    <string name="none_active_product">Satışta Olan İlanınız Bulunmuyor</string>
    <string name="take_a_product">İlan Ver</string>
    <string name="none_timeout_product">Süresi Dolan İlanınız Bulunmuyor</string>
    <string name="none_sold_product">Henüz Satılan İlanınız Bulunmuyor</string>
    <string name="none_liked_product">Henüz Favori İlanınız Bulunmuyor</string>
    <string name="update_product">İlanı Güncelle</string>
    <string name="sold_product">İlan Satıldı</string>
    <string name="delete_product">İlanı Sil</string>
    <string name="category_of_product">Kategori</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="dialog_delete_text">"İlanı Silmek İstediğine Emin Misin ? "</string>
    <string name="dialog_update_text">İlanı Güncellemek İstediğinize Emin Misiniz ?</string>
    <string name="dialog_sold_text">"İlanı Satıldı Olarak İşaretlemek İstiyor Musunuz ? "</string>

    <string name="image">Fotoğraf</string>
    <string name="all_image">Tüm Fotoğraflar</string>
    <string name="preview">Önizle</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">Ekleyebileceğin Fotoğraf Sınırını Aştın</string>
    <string name="done">Tamamlandı</string>
    <string name="done_with_count">Tamamlandı(%1$d/%2$d)</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="delete">Sil</string>
    <string name="edit">Düzenle</string>
    <string name="deleted_a_photo">Bir fotoğrafı sildin</string>
    <string name="confirm_to_delete">Silmeyi Onayla？</string>
    <string name="cancel">İptal</string>
    <string name="undo">Geri Al</string>
    <string name="follow">Takip Et</string>
    <string name="report_user">Kullanıcıyı Şikayet Et</string>
    <string name="send">Gönder</string>
    <string name="para_birimi">TL</string>
    <string name="hello">Merhaba</string>
    <string name="wantToExchange">Takas Yapmak İstiyorum !</string>
    <string name="isExist">Ürün Mevcut Mudur ?</string>

</resources>