<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct.Fragments.DetailsFragment">

    <LinearLayout
        android:id="@+id/details_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/menu_background"
        android:orientation="horizontal"
        android:weightSum="9">

        <ImageView
            android:id="@+id/details_top_bar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/topbar_back_arrow_png"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/details_top_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:scaleType="center"
            android:text="@string/details_of_product"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/details_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/details_top_bar"
        android:background="@color/menu_background"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





            <RelativeLayout
                android:id="@+id/details_product_status"
                android:layout_width="match_parent"
                android:layout_height="30dp"
               android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/status_of_product"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerVertical="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:textSize="20sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/unlem_png"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/details_status_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_product_status"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp">
                
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/details_radio_button_unselected_bg"
                    android:button="@android:color/transparent"
                    android:paddingStart="20dp"
                    android:paddingEnd="50dp"
                    android:text="@string/newWord"
                    android:textAlignment="center"
                    android:textColor="@color/details_radiobutton_unselected_text_color"
                    android:drawableStart="@drawable/new_smile_png"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/details_radio_button_unselected_bg"
                    android:button="@android:color/transparent"
                    android:paddingStart="20dp"
                    android:paddingEnd="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/lilUsed"
                    android:textAlignment="center"
                    android:textColor="@color/details_radiobutton_unselected_text_color"
                    android:drawableStart="@drawable/lil_smile_png"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/details_radio_button_unselected_bg"
                    android:button="@android:color/transparent"
                    android:paddingStart="20dp"
                    android:paddingEnd="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/used"
                    android:textAlignment="center"
                    android:textColor="@color/details_radiobutton_unselected_text_color"
                    android:drawableStart="@drawable/lil_smile_png"/>
            </RadioGroup>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>